# LOCAL-LLM-STACK-RELOADED

./: .gitignore  ARCHITECTURE_ANALYSIS_README.md  README.md  architecture_analysis.py  architecture_analysis_requirements.txt  architecture_analyzer.py  architecture_report_template.html  architecture_report_template_enhanced.html  code_quality_review.md  enhanced_architecture_analysis.py  init_repo.py  isolated_test.py  pyproject.toml  record_style_guide_creation.py  requirements.txt  run_architecture_analysis.py  run_architecture_analyzer.py  run_codeqa.py  setup.py  simulate_codeqa.py  test_circular_import.py  test_circular_import_minimal.py  test_code_quality.py  test_direct_imports.py  test_record_style_guide.py
docker/modules/: neo4j.yml
docs/: core-utilities.md  dependency-injection.md  knowledge-graph.md  migration-plan.md  open-todos.md  specification-manifest.md  style-guide.md
docs/api/: README.md  index.md
docs/api/cli/: index.md
docs/api/core/: config.md  (+2 more)
examples/: code_transformation.py  record_secrets_migration.py  utility_usage.py
llm_stack/: __init__.py  cli.py
llm_stack/cli_commands/: __init__.py  generate_secrets.py  update_librechat_secrets.py  validate_configs.py
llm_stack/code_quality/: __init__.py  commands.py  module.py
llm_stack/core/: __init__.py  cli_utils.py  command_utils.py  common.py  config.py  db_utils.py  dependency_injection.py  docker.py  error.py  events.py  file_utils.py  interfaces.py  log_exceptions.py  logging.py  models.py  module_integration.py  secrets.py  system.py  tool_integration.py  validation.py  validation_utils.py  visualization_utils.py
llm_stack/knowledge_graph/: __init__.py  client.py  migration.py  models.py  schema.py
llm_stack/modules/: __init__.py  module_api.py
llm_stack/tools/: __init__.py
(+23 files in other folders)
